# docker_example

./: cuad.ipynb  docker-compose.yml  presentacion.md  pyproject.toml
api/: Dockerfile
app/: app.py
